# shvc

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .editorconfig  .gitignore  .gitlab-ci.yml  .muon_fmt.ini  .release.sh  .version.sh  CHANGELOG.md  COPYRIGHT  LICENSE  README.md  flake.nix  gcovr.cfg  hawkmoth.nix  meson.build  meson_options.txt  release.sh  ruff.toml  sphinx.patch
cpconv/: main.c  meson.build  opts.c  opts.h
demo/: device_handler.c  device_handler.h  main.c  meson.build  opts.c  path.gperf
demo/client/: main.c  meson.build  opts.c  opts.h  rpc_connect.c  rpc_connect.h  rpc_connection.c  rpc_connection.h  rpc_device_operations.c  rpc_device_operations.h  rpc_error_logging.c  rpc_error_logging.h  rpc_request.c  rpc_request.h  utils.c  utils.h
demo/device/: device_handler.c  handler.c  handler.h  main.c  meson.build  opts.c  opts.h
demo/history/: main.c  meson.build  opts.c  opts.h
docs/: README.adoc  api.md  api.rst  conf.py  fork.adoc  index.md  index.rst  integration_tests.adoc  unittests.adoc
docs/api/: chainpack.md  chainpack.rst  cp.md  cp.rst  cp_pack.md  cp_pack.rst  cp_tools.md  cp_tools.rst  cp_unpack.md  cp_unpack.rst  cp_unpack_pack.md  crc32.md  crc32.rst  index.md  index.rst  libshvbroker.md  libshvbroker.rst  libshvcallee.md  libshvcaller.md  libshvchainpack.md  libshvcp.md  libshvcp.rst  libshvhistory.md  libshvhistory.rst  libshvrpc.md  libshvrpc.rst  rpcaccess.md  rpcaccess.rst  rpcalerts.rst  rpccall.md  rpccall.rst  (+45 more)
include/: foo.h  meson.build
include/shv/: chainpack.h  cp.h  cp_pack.h  cp_tools.h  cp_unpack.h  cp_unpack_pack.h  cpchainpack.h  cpcp.h  cpcp_convert.h  cpcp_pack.h  cpcp_unpack.h  cpon.h  crc32.h  rpcaccess.h  rpcalerts.h  rpcapp.h  rpcbroker.h  rpccall.h  rpcclient.h  rpcclient_impl.h  rpcclient_stream.h  rpcclient_url.h  rpcdir.h  rpcerror.h  rpcfile.h  rpchandler.h  rpchandler_app.h  rpchandler_device.h  rpchandler_file.h  rpchandler_files.h  rpchandler_history.h  rpchandler_impl.h  rpchandler_login.h  rpchandler_records.h  rpchandler_responses.h  rpchandler_signals.h  rpchistory.h  rpclogger.h  rpclogin.h  rpcmsg.h  (+12 more)
libfoo/: count.c  meson.build
libshvbroker/: access_stage.c  api.c  api.h  api_broker_method.gperf  api_current_client_method.gperf  api_login.c  api_login.h  arr.h  broker.h  libshvbroker.version  meson.build  mount.c  mount.h  multipack.c  multipack.h  nbool.h  role.c  rpc_stage.c  rpcbroker.c  rpcbroker_run.c  signal.c  stages.h  subscription.c  util.c  util.h
libshvcallee/: libshvcallee.version  meson.build  rpchandler_device.c  rpchandler_device_method.gperf
libshvcaller/: libshvcaller.version  meson.build  rpccall.c  rpchandler_responses.c
libshvchainpack/: chainpack.c  chainpack.h  chainpack_pack.c  chainpack_unpack.c  common.c  cp_pack.c  cp_unpack.c  cpcp.c  cpcp_convert.c  cpdatetime.c  cpdecimal.c  cpon.c  cpon.h  cpon_pack.c  cpon_unpack.c  libshvchainpack.version  meson.build
libshvclient/: libshvclient.version  meson.build  rpchandler_responses.c
libshvcp/: chainpack_pack.c  chainpack_unpack.c  common.c  common.h  cp_pack.c  cp_tools.c  cp_unpack.c  cp_unpack_pack.c  cpdatetime.c  cpdecimal.c  cperror.c  cpitem.c  cpon_pack.c  cpon_unpack.c  libshvcp.version  meson.build
libshvhistory/: getlog_param_keys.gperf  libshvhistory.version  meson.build  rpchandler_files.c  rpchandler_history.c  rpchandler_records.c  rpchistory.c
libshvrpc/: crc.c  crc.h  crc32.c  libshvrpc.version  meson.build  rpcaccess.c  rpcaccess.gperf  rpcalerts.c  rpcapp.c  rpccall.c  rpcclient.c  rpcclient_connect.c  rpcclient_datagram.c  rpcclient_log.c  rpcclient_login.c  rpcclient_serial.c  rpcclient_stream.c  rpcclient_url.c  rpcdir.c  rpcdir_key.gperf  rpcerror.c  rpcfile.c  rpchandler.c  rpchandler_app.c  rpchandler_login.c  rpchandler_responses.c  rpclogger.c  rpclogin.c  rpcmsg.c  rpcmsg_access.c  rpcmsg_access.gperf  rpcmsg_head.c  rpcmsg_meta.c  rpcmsg_pack.c  rpcmsg_request_id.c  rpcmsg_unpack.c  rpcnode.c  rpcprotocol_common.c  rpcprotocol_common.h  rpcprotocol_serial.c  (+14 more)
libshvrpc/rpchandler/: app.c  app_method.gperf  device.c  file.c  file_method.gperf  login.c  responses.c  signals.c
libshvrpc/rpctransport/: can.c  pipe.c  tcp.c  tty.c  unix.c
libshvrpc/sha1/: nuttx.c  openssl.c
shvbroker/: config.c  config.h  meson.build
shvc/: main.c  meson.build  opts.c  opts.h
shvcbroker/: config.c  config.h  main.c  meson.build  opts.c  opts.h
shvcp/: main.c  meson.build  opts.c  opts.h
shvcs/: main.c  meson.build  opts.c  opts.h
shvcsub/: main.c  meson.build  opts.c
shvctio/: meson.build
src/: config.c  config.h  main.c  meson.build
subprojects/: .fetch.nix  .gitignore  fetch.nix  nix-setup-hook.sh  uriparser.wrap
tests/: meson.build  test-driver.sh  valgrind-wrapper.py  valgrind-wrapper.sh  valgrind.supp
tests/run/: __version__.py  conftest.py  device.py  foo.bats  meson.build  pytest.ini  test_cli.py  test_cpconv.py  test_demo.py  test_shvc.py  test_shvcbroker.py  test_shvcs.py  test_transport.py  utils.py
tests/unit/: config.c  count.c  meson.build
tests/unit/libshvbroker/: meson.build  nbool.c
tests/unit/libshvcaller/: meson.build
tests/unit/libshvchainpack/: chainpack.c  cp_pack.c  cp_unpack.c  cpdatetime.c  cpdecimal.c  cpon.c  meson.build  packunpack.c  packunpack.h
tests/unit/libshvclient/: meson.build  rpcurl.c  strset.c
tests/unit/libshvcp/: chainpack.c  chainpackh.c  cp_pack.c  cp_unpack.c  cpdatetime.c  cpdecimal.c  cph.c  cpitem.c  cpon.c  meson.build
tests/unit/libshvhistory/: meson.build  rpchistory.c
tests/unit/libshvrpc/: crc32.c  meson.build  rpcaccess.c  rpcalerts.c  rpcclient.c  rpcclient_links.c  rpcclient_login.c  rpcclient_ping.c  rpcclient_ping.h  rpcclient_stream.c  rpcdir.c  rpcerror.c  rpcfile.c  rpclogin.c  rpcmsg_access.c  rpcmsg_head.c  rpcmsg_meta.c  rpcmsg_pack.c  rpcri.c  rpctransport.c  rpcurl.c  strset.c
tests/unit/shvcbroker/: config.c  meson.build
tests/unit/utils/: bdata.h  broker.c  broker.h  item.h  meson.build  packstream.c  packstream.h  tcpport.c  tcpport.h  tmpdir.c  tmpdir.h  unpack.c  unpack.h  url.h
(+7 files in other folders)
