option(
  'tests',
  type: 'feature',
  value: 'auto',
  description: 'Expect tests to be build and check for their dependencies',
)

# Options to disable various functionalities
option(
  'tcp',
  type: 'boolean',
  value: true,
  description: 'Include TCP/IP RPC transport. You might want to disable this if you do not have IP support on your platform.',
)

# Applications
option(
  'shvc',
  type: 'boolean',
  value: true,
  description: 'Build shvc tool that can call methods over SHV RPC protocol.',
)
option(
  'shvcsub',
  type: 'boolean',
  value: true,
  description: 'Build shvcsub tool that can subscribe and receive SHV RPC signals.',
)
option(
  'shvcp',
  type: 'boolean',
  value: true,
  description: 'Build shvcp tool that can copy files over SHV RPC protocol.',
)
option(
  'shvctio',
  type: 'boolean',
  value: true,
  description: 'Build shvctio terminal interface for SHV RPC exchange nodes.',
)
option(
  'shvcbroker',
  type: 'boolean',
  value: true,
  description: 'Build SHV RPC Broker standalone application.',
)

# Demo applications
option(
  'demo-device',
  type: 'boolean',
  value: true,
  description: 'Build SHV RPC demo device application.',
)
option(
  'demo-client',
  type: 'boolean',
  value: true,
  description: 'Build SHV RPC demo client application.',
)
# Applications defaults
option(
  'default-url',
  type: 'string',
  value: 'tcp://test@localhost?password=test',
  description: 'Default RPC URL used by client tools.',
)
