option(
  'tests',
  type: 'combo',
  choices: ['auto', 'enabled', 'disabled'],
  description: 'Expect tests to be build and check for their dependencies',
)

# Options to disable various functionalities
option(
  'tcp',
  type: 'boolean',
  value: true,
  description: 'Include TCP/IP RPC transport. You might want to disable this if you do not have IP support on your platform.',
)
option(
  'cryptorand',
  type: 'boolean',
  value: true,
  description: 'Use cryptographic-random instead of pseudo-random for generated authnetication tokens.',
)

# Functional options
option(
  'file_maxwrite',
  type: 'integer',
  min: 0,
  value: 128,
  description: 'Set maximal size in bytes of single write operation for file nodes. Larger transfers are rejected.',
)

option(
  'getlog_limit',
  type: 'integer',
  min: 0,
  value: 1000,
  description: 'Set the maximal number of records that can be obtained with getLog method.',
)

# Message meta limits
option(
  'path_limit',
  type: 'integer',
  min: -1,
  value: 1024,
  description: 'Default limit imposed on the path size. You can set it to `-1` for unconstrained allocation.',
)

option(
  'name_limit',
  type: 'integer',
  min: 1,
  value: 256,
  description: 'Default limit imposed on the method, source, and signal size.',
)

option(
  'userid_limit',
  type: 'integer',
  min: 1,
  value: 256,
  description: 'Default limit imposed the on the userid size.',
)

# Applications
option(
  'shvc',
  type: 'feature',
  description: 'Build shvc tool that can call methods over SHV RPC protocol.',
)
option(
  'shvcs',
  type: 'feature',
  description: 'Build shvcs tool that can receive SHV RPC signals.',
)
option(
  'shvcp',
  type: 'feature',
  description: 'Build shvcp tool that can copy files over SHV RPC protocol.',
)
option(
  'shvctio',
  type: 'feature',
  description: 'Build shvctio terminal interface for SHV RPC exchange nodes.',
)
option(
  'shvcbroker',
  type: 'feature',
  description: 'Build SHV RPC Broker standalone application.',
)

# Demo applications
option(
  'demo-device',
  type: 'feature',
  description: 'Build SHV RPC demo device application.',
)
option(
  'demo-client',
  type: 'feature',
  description: 'Build SHV RPC demo client application.',
)
option(
  'demo-history',
  type: 'feature',
  description: 'Build SHV RPC demo history application.',
)

# Applications defaults
option(
  'default-url',
  type: 'string',
  value: 'tcp://test@localhost?password=test',
  description: 'Default RPC URL used by client tools.',
)
